--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -296,3 +296,47 @@ a:hover{ transition: color 0.2s;}
 .even{
     background-color: #dddddd;
 }
+
+.file-box {
+    position: relative;
+    width: 340px
+}
+
+.txt {
+    height: 22px;
+    border: 1px solid #cdcdcd;
+    width: 180px;
+    vertical-align: middle;
+    margin: 0;
+    padding: 0
+}
+
+.btn {
+    border: 1px solid #CDCDCD;
+    height: 24px;
+    width: 70px;
+    vertical-align: middle;
+    margin: 0;
+    padding: 0
+}
+
+.file {
+    position: absolute;
+    top: 1px;
+    right: 30px;
+    height: 24px;
+    filter: alpha(opacity :   0);
+    opacity: 0;
+    width: 260px;
+    vertical-align: middle;
+    margin: 0;
+    padding: 0
+}
+
+.modal-dialog{
+    padding: 0;
+    margin: 0;
+    top:30%;
+    right:30%;
+    left:30%;
+}
