--- a/src/main/webapp/resources/style/css.css
+++ b/src/main/webapp/resources/style/css.css
@@ -17,7 +17,7 @@ header span a{ color: #333; color: #fff;}
 .dropdown_index{ background: #ccc}
 .dropdown_index:hover{ background: no-repeat}
 .form-group_search { font-size:0.75em !important;  }
-.tab_div{width: 100%; float: left; }
+.tab_div{width: 100%; float: left; padding-left: 75px;}
 .tab_div span.tab_nav{ width: 98%; background: #c6c1c4; float: left; margin-left: 13px;padding-right: 0px;}
 .tab_div span a{ width: 25%; float: left; background: #c6c1c4;  padding: 6px; text-align: center; color:#fff}
 .tab_div span a.addactive{ background: #09CEB8; color: #fff;  }
