--- a/src/main/webapp/resources/css/map.css
+++ b/src/main/webapp/resources/css/map.css
@@ -7,7 +7,7 @@ body, html {
 .padding_none {
 	padding: 0px!important;
 }
-button{ border: none;} button:focus{ border: none; box-shadow: none;}
+button{ border: none;background-color: #ffffff00;  color: #428bca;} button:focus{ border: none; box-shadow: none;}
 .color_fff {
 	color: #fff
 }
@@ -121,7 +121,7 @@ ol, ul {
 }
 /*主体*/
 .sidebar_left {
-	width: 75%;
+	width: 79%;
 	float: left;
 	position: relative;
 }
@@ -138,7 +138,7 @@ ol, ul {
 /*右侧样式*/
 
 .sidebar_right {
-	width: 24%;
+	width: 20%;
 	margin-left: 1%;
 	float: right;
 	z-index: 1;
