--- a/src/main/webapp/resources/css/map.css
+++ b/src/main/webapp/resources/css/map.css
@@ -874,6 +874,25 @@ ol, ul {
 
  /*add right style*/
 .table{  font-size: 12px !important; line-height: 22px; color: #666}
+/*table tbody {*/
+	/*display:block;*/
+	/*height:340px;*/
+	/*overflow-y:scroll;*/
+/*}*/
+
+
+/*table thead, tbody tr {*/
+	/*display:table;*/
+	/*width:100%;*/
+	/*table-layout:fixed;*/
+/*}*/
+
+
+/*table thead {*/
+	/*width: calc( 100% - 1em )*/
+/*}*/
+
+
 .accessory a:hover{ background: #2dbd9e; color: #fff}
 .ta_right{ line-height: 22px;}
 .sidebar_right div{ font-size: 0.875em !important;}
