--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -123,7 +123,7 @@ a:hover{ transition: color 0.2s;}
 .table_list >tr >td{ width: 33.333%;}
 .table_list tr td{ border-right: 1px solid #bbb;border-bottom:1px solid  #ccc;padding: 5px 0px;}
 .table_list thead th{ border-right: 1px solid #bbb;border-bottom:1px solid  #ccc;padding: 5px 0;}
-.table_list1 tr td{ border-right: 1px solid #bbb;border-bottom:1px solid  #ccc;padding: 5px 0px;font-size: 12px;}
+.table_list1 tr td{ border-right: 1px solid #bbb;border-bottom:1px solid  #ccc;padding: 5px 0px;font-size: 12px; vertical-align:middle;}
 .table_list1 thead th{ border-right: 1px solid #bbb;border-bottom:1px solid  #ccc;padding: 5px 0;font-size: 14px;}
 .table_list tr td:last-child{border-right:none;}
 .review-control{ width: 100%; margin-top: 20px; background: #8f8fb0; border: none; box-shadow: none; height: 30px; font-size: 12px; line-height: 25px;}
