--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-body ,html{ width:100%; height:100%;font-family: "Microsoft YaHei";  font-size:16px; min-width: 1200px; background-color: white;overflow-y:hidden}
+body ,html{ width:100%; height:100%;font-family: "Microsoft YaHei";  font-size:16px; min-width: 1200px; background-color: white;overflow-y:auto}
 .font10{ font-size: 10px;}
 .padding0{padding: 0px !important;}
 .padd_l20{ padding-left: 15px !important;; }
