财付通字段映射，支付宝一键导出代码提交

--- a/src/main/webapp/resources/css/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap.css
@@ -2324,7 +2324,7 @@ th {
   background-color: #32316b;
 }
 .table-striped > tbody > tr:nth-of-type(even) {
-  background-color: #1d1b59;
+  /*background-color: #1d1b59;*/
 }
 .table-hover > tbody > tr:hover {
   background-color: #0fa792;
