第三方账户添加到表 界面可更改账户为第三方账户 用户注册需要管理员审批 可手动编辑用户试用时间 案件名与用户绑定 防止不同用户相同案件名无法创建

--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -345,3 +345,34 @@ a:hover{ transition: color 0.2s;}
 .on{
     color: #eb724c;
 }
+
+.dropCss {
+    position: relative;
+    display: inline-block;
+}
+
+.dropCss-content {
+    display: none;
+    position: absolute;
+    top:-10%;
+    left:100%;
+    background-color: #f9f9f9;
+    min-width: 100px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.4);
+    border-radius: 6px;
+}
+
+.dropCss-content a {
+    color: black;
+    padding: 3px 3px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropCss-content a:hover {
+    background-color: #bbb;
+}
+
+.dropCss:hover .dropCss-content {
+    display: block;
+}
