--- a/src/main/webapp/resources/style/default.css
+++ b/src/main/webapp/resources/style/default.css
@@ -58,9 +58,9 @@ button{ border: none; cursor: pointer}
 .padd_r_80{ padding-right:80px !important;}
 .width_100{ width: 100%}
 .width_80{ width: 80%}
-label {
-    font-weight: normal;
-    font-size: 12px !important;
-    line-height: 24px;
-}
+/*label {*/
+    /*font-weight: normal;*/
+    /*font-size: 12px !important;*/
+    /*line-height: 24px;*/
+/*}*/
 .dre span{  font-size: 16px !important;}
