试用账号申请添加重复密码 支付宝金额字段类型修改 人员模块 字段映射模块修改 授权界面提那家用户名

--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -376,3 +376,9 @@ a:hover{ transition: color 0.2s;}
 .dropCss:hover .dropCss-content {
     display: block;
 }
+
+.label_c{
+    color: black;
+    font-size: 12px;
+    font-weight:bold;
+}
